products layout ready

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="main.min.css">
   <title>Document</title>
 </head>
+
 <body>
   <div class="wrapper">
     <div class="maincontent">
@@ -20,7 +22,7 @@
             </div>
             <div class="order__call">
               <svg class="main-menu__pic" viewbox="0 0 20 20" height="20" width="20">
-                <use href = "./images/icons/sprite.svg#ordered_call"> </use>
+                <use href="./images/icons/sprite.svg#ordered_call"> </use>
               </svg>
             </div>
           </div>
@@ -33,7 +35,7 @@
               <img src="./pictures/logo.png" alt="логотип" class="logo__pic">
             </div>
             <h2 class="splash__name">РЕКЛАМНО-ПРОИЗВОДСТВЕННАЯ <br> КОМПАНИЯ </h2>
-          </div>       
+          </div>
           <div class="splash__text splash__footer">
             РАЗРАБОТКА ПРОИЗВОДСТВО <br> ПОСТАВКА ПО РФ
           </div>
@@ -45,7 +47,7 @@
             <li class="main-menu__item">
               <div class="main-menu__img">
                 <svg class="main-menu__pic" viewbox="0 0 20 20" height="20" width="20">
-                  <use href = "./images/icons/sprite.svg#scroll_dinamic"> </use>
+                  <use href="./images/icons/sprite.svg#scroll_dinamic"> </use>
                 </svg>
               </div>
               <div class="main-menu__text">Новости</div>
@@ -53,7 +55,7 @@
             <li class="main-menu__item">
               <div class="main-menu__img">
                 <svg class="main-menu__pic" viewbox="0 0 20 20" height="20" width="20">
-                  <use href = "./images/icons/sprite.svg#scroll_person"></use>
+                  <use href="./images/icons/sprite.svg#scroll_person"></use>
                 </svg>
               </div>
               <div class="main-menu__text">Компания</div>
@@ -61,7 +63,7 @@
             <li class="main-menu__item">
               <div class="main-menu__img">
                 <svg class="main-menu__pic" viewbox="0 0 20 20" height="20" width="20">
-                  <use href = "./images/icons/sprite.svg#scroll_pero"> </use>
+                  <use href="./images/icons/sprite.svg#scroll_pero"> </use>
                 </svg>
               </div>
               <div class="main-menu__text">Продукция</div>
@@ -69,7 +71,7 @@
             <li class="main-menu__item">
               <div class="main-menu__img">
                 <svg class="main-menu__pic" viewbox="0 0 20 20" height="20" width="20">
-                  <use href = "./images/icons/sprite.svg#scroll_case"> </use>
+                  <use href="./images/icons/sprite.svg#scroll_case"> </use>
                 </svg>
               </div>
               <div class="main-menu__text">Портфолио</div>
@@ -77,7 +79,7 @@
             <li class="main-menu__item">
               <div class="main-menu__img">
                 <svg class="main-menu__pic" viewbox="0 0 20 20" height="20" width="20">
-                  <use href = "./images/icons/sprite.svg#scroll__shest"> </use>
+                  <use href="./images/icons/sprite.svg#scroll__shest"> </use>
                 </svg>
               </div>
               <div class="main-menu__text">Технологии</div>
@@ -85,7 +87,7 @@
             <li class="main-menu__item">
               <div class="main-menu__img">
                 <svg class="main-menu__pic" viewbox="0 0 20 20" height="20" width="20">
-                  <use href = "./images/icons/sprite.svg#scroll_letter"> </use>
+                  <use href="./images/icons/sprite.svg#scroll_letter"> </use>
                 </svg>
               </div>
               <div class="main-menu__text">Контакты</div>
@@ -95,39 +97,37 @@
             <li class="socials__item">
               <a class="socials__link" href="#">
                 <svg class="socials__pic" viewbox="0 0 20 20" height="20" width="20">
-                  <use href = "./images/icons/sprite.svg#YouTube"> </use>
+                  <use href="./images/icons/sprite.svg#YouTube"> </use>
                 </svg>
               </a>
             </li>
-              <li class="socials__item">
-                <a class="socials__link" href="#">
-                  <svg class="socials__pic" viewbox="0 0 20 20" height="20" width="20">
-                    <use href = "./images/icons/sprite.svg#g+"> </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials__item">
-                <a class="socials__link" href="#">
-                  <svg class="socials__pic" viewbox="0 0 20 20" height="20" width="20"> 
-                    <use href = "./images/icons/sprite.svg#f"> </use>
-                  </svg>
-                </a></li>
-              <li class="socials__item">
-                <a class="socials__link" href="#">
-                  <svg class="socials__pic" viewbox="0 0 20 20" height="20" width="20"> 
-                    <use href = "./images/icons/sprite.svg#inst"> </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials__item">
-                <a class="socials__link" href="#">
-                  <svg class="socials__pic" viewbox="0 0 20 20" height="20" width="20"> 
-                    <use href = "./images/icons/sprite.svg#tw"> </use>
-                  </svg>
-                </a>
-              </li>
+            <li class="socials__item">
+              <a class="socials__link" href="#">
+                <svg class="socials__pic" viewbox="0 0 20 20" height="20" width="20">
+                  <use href="./images/icons/sprite.svg#g+"> </use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link" href="#">
+                <svg class="socials__pic" viewbox="0 0 20 20" height="20" width="20">
+
+            <li class="socials__item">
+              <a class="socials__link" href="#">
+                <svg class="socials__pic" viewbox="0 0 20 20" height="20" width="20">
+                  <use href="./images/icons/sprite.svg#inst"> </use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link" href="#">
+                <svg class="socials__pic" viewbox="0 0 20 20" height="20" width="20">
+                  <use href="./images/icons/sprite.svg#tw"> </use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </nav>        
+        </nav>
       </section>
       <section class="section popup">
         <nav class="popup__menu">
@@ -185,7 +185,8 @@
               НЕСТАНДАРТНЫЕ РЕШЕНИЯ
             </div>
             <div class="advantage__text">
-              Приоритетныем направлением деятельности компании является разработка и производство нестандартных рекламных конструкций
+              Приоритетныем направлением деятельности компании является разработка и производство нестандартных
+              рекламных конструкций
             </div>
           </li>
           <li class="advantage__item">
@@ -207,47 +208,49 @@
               СОБСТВЕННОЕ ПРОИЗВОДСТВО
             </div>
             <div class="advantage__text">
-              Вся продукция изготавливается на собственном производстве с использованием передовых технологий и современного оборудования.
+              Вся продукция изготавливается на собственном производстве с использованием передовых технологий и
+              современного оборудования.
             </div>
           </li>
         </ul>
       </section>
       <section class="section socials">
-       
+
       </section>
-    </div>  
+    </div>
   </div>
   <ul class="nav-rt__list">
     <li class="nav-rt__item active">
-        <a href="#" class="nav-rt__link" data-scroll-to="0"></a>
+      <a href="#" class="nav-rt__link" data-scroll-to="0"></a>
     </li>
     <li class="nav-rt__item">
-        <a href="#" class="nav-rt__link" data-scroll-to="1"></a>
+      <a href="#" class="nav-rt__link" data-scroll-to="1"></a>
     </li>
     <li class="nav-rt__item">
-        <a href="#" class="nav-rt__link" data-scroll-to="2"></a>
+      <a href="#" class="nav-rt__link" data-scroll-to="2"></a>
     </li>
     <li class="nav-rt__item">
-        <a href="#" class="nav-rt__link" data-scroll-to="3"></a>
+      <a href="#" class="nav-rt__link" data-scroll-to="3"></a>
     </li>
     <li class="nav-rt__item">
-        <a href="#" class="nav-rt__link" data-scroll-to="4"></a>
+      <a href="#" class="nav-rt__link" data-scroll-to="4"></a>
     </li>
     <li class="nav-rt__item">
-        <a href="#" class="nav-rt__link" data-scroll-to="5"></a>
+      <a href="#" class="nav-rt__link" data-scroll-to="5"></a>
     </li>
     <li class="nav-rt__item">
-        <a href="#" class="nav-rt__link" data-scroll-to="6"></a>
+      <a href="#" class="nav-rt__link" data-scroll-to="6"></a>
     </li>
     <li class="nav-rt__item">
-        <a href="#" class="nav-rt__link" data-scroll-to="7"></a>
+      <a href="#" class="nav-rt__link" data-scroll-to="7"></a>
     </li>
     <li class="nav-rt__item">
-        <a href="#" class="nav-rt__link" data-scroll-to="8"></a>
+      <a href="#" class="nav-rt__link" data-scroll-to="8"></a>
     </li>
   </ul>
 
 </body>
+
 </html>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.3.6/mobile-detect.min.js"></script>
 <script src="https://www.youtube.com/iframe_api"></script>
