lost files found

--- a/src/design.html
+++ b/src/design.html
@@ -19,7 +19,7 @@
 						<div class="design__img"></div>
 						<p>Мы знаем, что вы продаете хороший, качественный продукт. Но как привлечь покупателя? Ничто так не влияет
 							при покупке товаров на потребителя, как внешний вид. Позвольте нам позаботиться об этом. Мы создаем
-							уникальный дизайн, который является эффективным инструментом для развития и продвижения вашего бизнеса
+							уникальный дизайн, который является эффективным инструментом для развития и продвижения вашего бизнеса.
 						</p>
 					</div>
 					<div class="design__types">
