the ads page: new corrections

--- a/src/stands.html
+++ b/src/stands.html
@@ -135,7 +135,7 @@
 							</ul>
 						</div>
 						<div class="offices__btns">
-							<button class="circle-btn"></button>
+							<button class="circle-btn circle-btn--active"></button>
 							<button class="circle-btn"></button>
 							<button class="circle-btn"></button>
 						</div>
